--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,16 +5,16 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
-    <h1>Create a Basketball Team!</h1>
-    <form method="POST" action="">
-    Team Name: <input type="text" name="name"><br>
-    Coach: <input type="text" name="coach"><br>
-    Point Guard: <input type="text" name="pg"><br>
-    Shooting Guard: <input type="text" name="sg"><br>
-    Small Forward: <input type="text" name="sf"><br>
-    Power Forward: <input type="text" name="pf"><br>
-    Center: <input type="text" name="c"><br>
-      <input type="submit" id="Submit">
-    </form>
+   <form method="POST" action="/team">
+     <h1>Create a Basketball Team!</h1>
+     <label> Team Name:<input type="text" name="name"> </label><br>
+     <label> Coach:<input type="text" name="coach"> </label><br>
+     <label> Point Guard:<input type="text" name="pg"> </label><br>
+     <label> Shooting Guard:<input type="text" name="sg"> </label><br>
+     <label> Small Forward:<input type="text" name="sf"> </label><br>
+     <label> Power Forward:<input type="text" name="pf"> </label><br>
+     <label> Center:<input type="text" name="c"> </label><br>
+     <input type="submit" id="Submit"/>
+   </form>
  </body>
 </html>
