--- a/views/team.erb
+++ b/views/team.erb
@@ -5,13 +5,14 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <h1>Team Name: <%= @teamname %></h1>
-   <h2>Coach: <%= @coach %><br>
-   Point Guard: <%= @pg%><br>
-   Shooting Guard: <%= @sg%><br>
-   Small Forward: <%= @sf%><br>
-   Power Forward: <%= @pf%><br>
-   Center: <%= @c%><br>
- </h2>
+   <h1>Team Name: <%= @name %></h1>
+   <h2>Coach: <%= @coach %></h2>
+   <h2>Point Guard: <%= @pg %></h2>
+   <h2>Shooting Guard: <%= @sg %></h2>
+   <h2>Small Forward: <%= @sf %></h2>
+   <h2>Power Forward: <%= @pf %></h2>
+   <h2>Center: <%= @c %></h2>
+
+
  </body>
 </html>
